--- a/baseball_react/public/index.html
+++ b/baseball_react/public/index.html
@@ -28,6 +28,10 @@
       href="https://fonts.googleapis.com/css2?family=Changa+One&display=swap"
       rel="stylesheet"
     />
+    <script
+      type="text/javascript"
+      src="https://www.gstatic.com/charts/loader.js"
+    ></script>
 
     <title>React App</title>
   </head>
